--- a/app/views/devise/mailer/reset_password_instructions.html.haml
+++ b/app/views/devise/mailer/reset_password_instructions.html.haml
@@ -1,6 +1,7 @@
 %p
-  Hello #{@resource.email}!
-%p Someone has requested a link to change your password. You can do this through the link below.
-%p= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token)
-%p If you didn't request this, please ignore this email.
-%p Your password won't change until you access the link above and create a new one.
+  Witaj #{@resource.email}!
+%p Ktoś poprosił zmianę twojego hasła. Możesz to zrobić poprzez poniższy link.
+
+%p= link_to 'Zmień moje hasło', edit_password_url(@resource, reset_password_token: @token)
+%p Jeśli nie prosiłeś o zmianę, zignoruj tę wiadomość.
+%p Twoje hasło nie zmieni się dopóki nie wejdziesz w powyższy link i nie stworzysz nowego.
