--- a/app/views/devise/mailer/unlock_instructions.html.haml
+++ b/app/views/devise/mailer/unlock_instructions.html.haml
@@ -1,5 +1,5 @@
 %p
-  Hello #{@resource.email}!
-%p Your account has been locked due to an excessive number of unsuccessful sign in attempts.
-%p Click the link below to unlock your account:
-%p= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token)
+  Witaj #{@resource.email}!
+%p Twoje konto zostało zablokowane przez zbyt dużą liczbę nieudanych logowań.
+%p Kliknij w poniższy link, aby odblokować swoje konto:
+%p= link_to 'Odblokuj moje konto', unlock_url(@resource, unlock_token: @token)
