--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -1,11 +1,11 @@
-%h2 Change your password
+%h2 Zmień hasło
 = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
   = f.error_notification
   = f.input :reset_password_token, as: :hidden
   = f.full_error :reset_password_token
   .form-inputs
-    = f.input :password, label: "New password", required: true, autofocus: true
-    = f.input :password_confirmation, label: "Confirm your new password", required: true
+    = f.input :password, label: "Nowe hasło", required: true, autofocus: true
+    = f.input :password_confirmation, label: "Potwierdź swoje nowe hasło", required: true
   .form-actions
-    = f.button :submit, "Change my password"
+    = f.button :submit, "Zmień hasło"
 = render "devise/shared/links"
