--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -14,7 +14,6 @@
         = f.input :current_password, hint: "potrzebujemy obecnego hasła, aby zapisać zmiany", required: true
       .form-actions
         = f.button :submit, "Zapisz"
-%h3 Cancel my account
+%h3 Usuń moje konto
 %p
-  Unhappy? #{link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+  Niezadowolony? #{link_to "Usuń moje konto", registration_path(resource_name), data: { confirm: "Jesteś pewny?" }, method: :delete}
