--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,4 +1,4 @@
-%h2 Sign up
+%h2 Rejestracja
 = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = f.error_notification
   .form-inputs
@@ -7,5 +7,5 @@
     = f.input :password, required: true
     = f.input :password_confirmation, required: true
   .form-actions
-    = f.button :submit, "Sign up"
+    = f.button :submit, "Zarejestruj się"
 = render "devise/shared/links"
