--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -1,9 +1,5 @@
 %p#notice= notice
 
 %p
-  %b Name:
+  %b Nazwa:
   = @team.name
-
-= link_to 'Edit', edit_team_path(@team)
-\|
-= link_to 'Back', teams_path
