--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
     %link{ href: "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css", rel: "stylesheet" }
     / Latest compiled and minified JavaScript
     %script{ src: "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js" }
+    = favicon_link_tag 'favicon.ico'
   %body
     %nav.navbar.navbar-inverse
       .container
