--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,13 +20,8 @@
         #navbar
           %ul.nav.navbar-nav.pull-right
             - if user_signed_in?
-              %li.dropdown
-                %a.dropdown-toggle{"data-toggle" => "dropdown", href: "#"}
-                  = current_user.username
-                  %span.caret
-                %ul.dropdown-menu{role: "menu"}
-                  %li= link_to 'Profil', edit_user_registration_path
-                  %li= link_to 'Wyloguj', destroy_user_session_path, method: :delete
+              %li= link_to current_user.username, edit_user_registration_path
+              %li= link_to 'Wyloguj', destroy_user_session_path, method: :delete
             - else
               %li= link_to 'Zaloguj', new_user_session_path
               %li= link_to 'Zarejestruj', new_user_registration_path
