--- a/app/views/rounds/index.html.haml
+++ b/app/views/rounds/index.html.haml
@@ -14,7 +14,7 @@
         %td= round.name
         %td= link_to 'Show', round
         %td= link_to 'Edit', edit_round_path(round)
-        %td= link_to 'Destroy', round, :method => :delete, :data => { :confirm => 'Are you sure?' }
+        %td= link_to 'Destroy', round, method: :delete, data: { confirm: 'Are you sure?' }
 
 %br
 
