--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,8 +2,8 @@
 = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = f.error_notification
   .form-inputs
-    = f.input :username, required: true
-    = f.input :email, required: true, autofocus: true
+    = f.input :username, required: true, autofocus: true
+    = f.input :email, required: true
     = f.input :password, required: true
     = f.input :password_confirmation, required: true
   .form-actions
