--- a/app/views/types/index.html.haml
+++ b/app/views/types/index.html.haml
@@ -1,18 +1,23 @@
-%h1 Moje typy
+%h1.text-center= "Moje typy - #{@round.name}"
 %br
-
-%table.table-striped
-  %tbody
-    - @matches.each_with_index do |match, index|
-      - type = match.types.where(user: current_user).first
-      %tr
-        %td= match.played.strftime("%d.%m.%Y, %H:%M")
-        %td
-          %strong= Team.find(match.first_team_id).name
-        %td= "-"
-        %td
-          %strong= Team.find(match.second_team_id).name
-        %td
-        %td= link_to type.first_score, '#', inplace_editable({ type: 'number', resource: 'type', url: type_url(type, format: :json), value: type.first_score, name: 'first_score'})
-        %td -
-        %td= link_to type.second_score, '#', inplace_editable({ type: 'number', resource: 'type', url: type_url(type, format: :json), value: type.second_score, name: 'second_score'})
+.row
+  .col-sm-2
+    = link_to 'Poprzednia kolejka', round_types_path(@round.id - 1) unless @round.id <= 1
+  .col-sm-8
+    %table.table.table-striped
+      %tbody
+        - @matches.each_with_index do |match, index|
+          - type = match.types.where(user: current_user).first
+          %tr
+            %td= match.played.strftime("%d.%m.%Y, %H:%M")
+            %td
+              %strong= Team.find(match.first_team_id).name
+            %td= "-"
+            %td
+              %strong= Team.find(match.second_team_id).name
+            %td
+            %td= link_to type.first_score, '#', inplace_editable({ type: 'number', resource: 'type', url: type_url(type, format: :json), value: type.first_score, name: 'first_score'})
+            %td -
+            %td= link_to type.second_score, '#', inplace_editable({ type: 'number', resource: 'type', url: type_url(type, format: :json), value: type.second_score, name: 'second_score'})
+  .col-sm-2
+    = link_to 'Następna kolejka', round_types_path(@round.id + 1)
