flags added to teams

--- a/app/views/admin/teams/_form.html.haml
+++ b/app/views/admin/teams/_form.html.haml
@@ -4,6 +4,7 @@
   .form-inputs
     = f.input :name
     = f.input :abbreviation
+    = f.input :flag
 
   .form-actions
     = f.button :submit, 'Zapisz drużynę'
