--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -1,5 +1,6 @@
-%p#notice= notice
+.row
+  .col-md-6
+    = image_tag(@team.flag, class: 'img-responsive')
 
-%p
-  %b Nazwa:
-  = @team.name
+  .col-md-6
+    %h1= @team.name
