--- a/app/views/admin/matches/index.html.haml
+++ b/app/views/admin/matches/index.html.haml
@@ -6,13 +6,14 @@
     - @matches.each do |match|
       %tr
         %td= link_to match.played.strftime("%d.%m.%Y, %H:%M"), match
-        %td= match.round.name
-        %td= Team.find(match.first_team_id).name
-        %td= "-"
-        %td= Team.find(match.second_team_id).name
+        %td.text-center= image_tag(match.first_team.flag, height: '20')
+        %td.text-right= Team.find(match.first_team_id).name
         %td= match.first_score
         %td= "-"
         %td= match.second_score
+        %td= Team.find(match.second_team_id).name
+        %td.text-center= image_tag(match.second_team.flag, height: '20')
+        %td= match.round.name
         %td= match.bet
         %td
           = link_to edit_admin_match_path(match) do
