--- a/app/views/matches/index.html.haml
+++ b/app/views/matches/index.html.haml
@@ -1,6 +1,10 @@
-.text-center
-  %h1= @round.name
-  %p= link_to 'Wytypuj pierwszą kolejkę!', round_types_path(Round.first.id), class: 'btn btn-default'
-
+%h1.text-center= @round.name
+.row
+  .col-sm-2
+    = match_link('Poprzednia', (@round.id - 1))
+  .col-sm-8.text-center
+    = link_to 'Wytypuj kolejkę!', round_types_path(@round.id), class: 'btn btn-default'
+  .col-sm-2
+    = match_link('Następna', (@round.id + 1))
 %br/
 = render "user_table"
