--- a/app/views/matches/_user_table.html.haml
+++ b/app/views/matches/_user_table.html.haml
@@ -5,9 +5,13 @@
 
     - @matches.each do |match|
       %td
-        %strong= link_to "#{match.first_team.abbreviation} - #{match.second_team.abbreviation}", match_path(match)
-        %br
-        = "(#{match.first_score} - #{match.second_score})"
+        = link_to(match) do
+          = image_tag(match.first_team.flag, height: '14')
+          = match.first_team.abbreviation
+          = image_tag(match.second_team.flag, height: '14')
+          = match.second_team.abbreviation
+          %br
+          = "(#{match.first_score} - #{match.second_score})"
 
   - @users.each do |user|
     %tr
