--- a/app/views/admin/teams/_form.html.haml
+++ b/app/views/admin/teams/_form.html.haml
@@ -5,6 +5,7 @@
     = f.input :name
     = f.input :abbreviation
     = f.input :flag
+    = f.input :photo
 
   .form-actions
     = f.button :submit, 'Zapisz drużynę'
