--- a/app/views/matches/_user_table.html.haml
+++ b/app/views/matches/_user_table.html.haml
@@ -4,14 +4,17 @@
     %td Punkty
 
     - @matches.each do |match|
-      %td
+      %td.text-center
         = link_to(match) do
           = image_tag(match.first_team.flag, height: '14')
           = match.first_team.abbreviation
+          %br/
+          = "(#{match.first_score} - #{match.second_score})"
+          %br/
           = image_tag(match.second_team.flag, height: '14')
           = match.second_team.abbreviation
-          %br
-          = "(#{match.first_score} - #{match.second_score})"
+
+
 
   - @users.each do |user|
     %tr
