--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -1,9 +1,9 @@
 .row
-  .col-md-6
+  .col-md-3
     = image_tag(@team.flag, class: 'img-responsive')
 
-  .col-md-6
-    %h1= @team.name
-.row
-  .col-md-6
+  %h1.col-md-6.text-center
+    = @team.name
+
+  .col-md-3
     = image_tag(@team.photo, class: 'img-responsive')
