--- a/app/views/types/index.html.haml
+++ b/app/views/types/index.html.haml
@@ -12,7 +12,7 @@
             %td= match.played.strftime("%d.%m.%Y, %H:%M")
             %td.text-center= image_tag(match.first_team.flag, height: '20')
             %td.text-right
-              %strong= Team.find(match.first_team_id).name
+              %strong= link_to match.first_team.name, match.first_team
             %td
               - if can_be_typed?(match.played)
                 %td= link_to type.first_score, '#', inplace_editable({ type: 'number', resource: 'type', url: type_url(type, format: :json), value: type.first_score, name: 'first_score'})
@@ -23,7 +23,7 @@
                 %td -
                 %td= type.second_score
             %td
-              %strong= Team.find(match.second_team_id).name
+              %strong= link_to match.second_team.name, match.second_team
             %td.text-center= image_tag(match.second_team.flag, height: '20')
             %td= type.bet
   .col-sm-2
