--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,35 +12,45 @@
     / Latest compiled and minified JavaScript
     %script{ src: "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js" }
     = favicon_link_tag 'favicon.ico'
-  %body
-    = render 'layouts/navbar'
+  #holder
+    %body
+      = render 'layouts/navbar'
 
-    .container
-      - flash.each do |key, value|
-        %div{ class: "alert alert-#{key}" }
-          = value
-    = yield :top_content
-    .container
-      %h1= yield :header
-      - if request.env['PATH_INFO'].include?('admin') && current_user.is_admin?
-        .col-md-2
-          .row
-            = link_to admin_matches_path, class: "btn btn-default btn-block" do
-              .text-left
-                Mecze
-          .row
-            = link_to admin_users_path, class: "btn btn-default btn-block" do
-              .text-left
-                Użytkownicy
-          .row
-            = link_to admin_rounds_path, class: "btn btn-default btn-block" do
-              .text-left
-                Rundy
-          .row
-            = link_to admin_teams_path, class: "btn btn-default btn-block" do
-              .text-left
-                Drużyny
-        .col-md-10
+      .container
+        - flash.each do |key, value|
+          %div{ class: "alert alert-#{key}" }
+            = value
+      = yield :top_content
+      #body.container
+        %h1= yield :header
+        - if request.env['PATH_INFO'].include?('admin') && current_user.is_admin?
+          .col-md-2
+            .row
+              = link_to admin_matches_path, class: "btn btn-default btn-block" do
+                .text-left
+                  Mecze
+            .row
+              = link_to admin_users_path, class: "btn btn-default btn-block" do
+                .text-left
+                  Użytkownicy
+            .row
+              = link_to admin_rounds_path, class: "btn btn-default btn-block" do
+                .text-left
+                  Rundy
+            .row
+              = link_to admin_teams_path, class: "btn btn-default btn-block" do
+                .text-left
+                  Drużyny
+          .col-md-10
+            = yield
+        - else
           = yield
-      - else
-        = yield
+
+        %footer.row
+          .large-12.columns
+            %hr
+              %p.pull-left
+                EuroTyper 2016 by
+                %a{ href: "http://github.com/pulpecja" } @pulpecja
+              %p.pull-right
+                %a{ href: "http://www.livescore.in/", target: "_blank", title: "Livescore.in"} Livescore.in
