--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -6,4 +6,4 @@
     = @team.name
 
   .col-md-3
-    = image_tag(@team.photo, class: 'img-responsive')
+    = image_tag(@team.photo.url, class: 'img-responsive')
