--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,12 +27,13 @@
 }
 
 html,body{
-  height: 100%
+  height: 100%;
 }
 
 #holder{
   min-height: 100%;
   position:relative;
+  background-color: #f6f6f6;
 }
 
 #body{
