--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,8 +1,11 @@
 %nav.navbar.navbar-inverse
   .container
     .navbar-header
-      = link_to 'Euro Typer', root_path, class: 'navbar-brand'
+      = link_to 'Strona główna', root_path, class: 'navbar-brand'
+
     #navbar
+      %ul.nav.navbar-nav
+        %li= link_to 'Klasyfikacja punktowa', users_path
       %ul.nav.navbar-nav.pull-right
         - if user_signed_in?
           %li= link_to current_user.username, edit_user_registration_path
