rules added, take_part added to users

--- a/app/assets/stylesheets/matches.css.scss
+++ b/app/assets/stylesheets/matches.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Matches controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.good-bet {
+  color: #0099cc;
+}
+
+.good-type {
+  font-weight: bold;
+}
