--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -7,3 +7,18 @@
 
   .col-md-3
     = image_tag(@team.photo.url, class: 'img-responsive')
+%br
+%p
+  %table.table.table-striped
+    - Match.by_team(@team).each do |match|
+      %tr
+        %td= link_to match.played.strftime("%d.%m.%Y, %H:%M"), match
+        %td.text-center= image_tag(match.first_team.flag, height: '20')
+        %td.text-right= Team.find(match.first_team_id).name
+        %td= match.first_score
+        %td= "-"
+        %td= match.second_score
+        %td= Team.find(match.second_team_id).name
+        %td.text-center= image_tag(match.second_team.flag, height: '20')
+        %td= match.round.name
+        %td= match.bet
