--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -6,6 +6,7 @@
       %th Login
       %th Email
       %th Rola
+      %th Bierze udział
       %th
       %th
     - @users.each do |user|
@@ -13,6 +14,7 @@
         %td= user.username
         %td= user.email
         %td= user.role
+        %td= user.take_part ? 'Tak' : 'Nie'
         %td
           = link_to edit_admin_user_path(user) do
             %span.glyphicon.glyphicon-pencil
