--- a/app/views/matches/_user_table.html.haml
+++ b/app/views/matches/_user_table.html.haml
@@ -17,7 +17,9 @@
 
   - @users.each do |user|
     %tr
-      %td= user.username
+      %td= link_to user.username, user_path(user)
       %td= user.points(@round)
       - @matches.each do |match|
-        %td= "#{match.types.where(user_id: user.id).first.try :first_score} - #{match.types.where(user_id: user.id).first.try :second_score}"
+        - type = match.types.where(user_id: user.id).first
+        %td{ class: [('good-bet' if good_bet(match, type)), ('good-type' if good_type(match, type))] }
+          = "#{type.try :first_score} - #{type.try :second_score}"
