--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -6,4 +6,5 @@
 %p 3. Nie trzeba typować całej kolejki za jednym razem.
 %p 4. Po zatwierdzeniu danego typu zapisywany jest on automatycznie w bazie. Nie ma potrzeby zatwierdzania/zapisywania całej kolejki.
 %p 5. Punktacja – za trafnie wytypowanego zwycięzcę meczu lub remis otrzymujemy 1 punkt. Za wytypowanie dokładnego wyniku meczu (np. 2-1) przyznawany jest dodatkowy punkt, więc za 1 mecz można otrzymać maksymalnie 2 punkty.
-%p 6. W razie problemów z aplikacją proszę o kontakt z naszym developerem Pulpecją!
+%p 6. Aplikacja musi "spać" przez 8 godzin dziennie, żeby być darmowa. Przez to czasem odpalenie strony może chwilę trwać, bo musi się "obudzić" ;)
+%p 7. W razie problemów z aplikacją proszę o kontakt z naszym developerem Pulpecją!
