--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,8 +1,8 @@
 %h1 Zasady
 
 %br/
-%p 1. Każdy mecz typować można do 2 godzin przed jego rozpoczęciem.
-%p 2. Typy zmieniać można dowolną ilość razy do 2 godzin przed rozpoczęciem danego meczu.
+%p 1. Każdy mecz typować można do godziny przed jego rozpoczęciem.
+%p 2. Typy zmieniać można dowolną ilość razy do godziny przed rozpoczęciem danego meczu.
 %p 3. Nie trzeba typować całej kolejki za jednym razem.
 %p 4. Po zatwierdzeniu danego typu zapisywany jest on automatycznie w bazie. Nie ma potrzeby zatwierdzania/zapisywania całej kolejki.
 %p 5. Punktacja – za trafnie wytypowanego zwycięzcę meczu lub remis otrzymujemy 1 punkt. Za wytypowanie dokładnego wyniku meczu (np. 2-1) przyznawany jest dodatkowy punkt, więc za 1 mecz można otrzymać maksymalnie 2 punkty.
