--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,27 +24,7 @@
       #body.container
         %h1= yield :header
         - if request.env['PATH_INFO'].include?('admin') && current_user.is_admin?
-          .col-md-2
-            .row
-              = link_to admin_matches_path, class: "btn btn-default btn-block" do
-                .text-left
-                  Mecze
-            .row
-              = link_to admin_users_path, class: "btn btn-default btn-block" do
-                .text-left
-                  Użytkownicy
-            .row
-              = link_to admin_rounds_path, class: "btn btn-default btn-block" do
-                .text-left
-                  Rundy
-            .row
-              = link_to admin_teams_path, class: "btn btn-default btn-block" do
-                .text-left
-                  Drużyny
-            .row
-              = link_to admin_competitions_path, class: "btn btn-default btn-block" do
-                .text-left
-                  Turnieje
+          = render 'layouts/admin_menu'
           .col-md-10
             = yield
         - else
