--- a/app/views/admin/rounds/index.html.haml
+++ b/app/views/admin/rounds/index.html.haml
@@ -2,14 +2,18 @@
 
 %table.table.table-striped.table-hover.records-index{ :'data-provides' => 'rowlink' }
   %tbody
-    - @rounds.each do |round|
+    - @competitions.each do |competition|
       %tr
-        %td= round.started_at
-        %td= round.name
-        %td
-          = link_to edit_admin_round_path(round) do
-            %span.glyphicon.glyphicon-pencil
-        %td
-          - if round.matches.blank?
-            = link_to admin_round_path(round), method: :delete, data: { confirm: 'Jesteś pewien?' } do
-              %span.glyphicon.glyphicon-trash
+        %th= competition.name
+      - competition.rounds.each do |round|
+        %tr
+          %td= round.started_at
+          %td= round.name
+          %td= round.stage
+          %td
+            = link_to edit_admin_round_path(round) do
+              %span.glyphicon.glyphicon-pencil
+          %td
+            - if round.matches.blank?
+              = link_to admin_round_path(round), method: :delete, data: { confirm: 'Jesteś pewien?' } do
+                %span.glyphicon.glyphicon-trash
