--- a/app/views/matches/index.html.haml
+++ b/app/views/matches/index.html.haml
@@ -1,16 +1,12 @@
+%h1.text-center= @round.name
+%br
 .row
-  .col-md-2
-    = render 'sidebar'
-  .col-md-10
-
-    %h1.text-center= @round.name
-    %br
-    .row
-      .col-sm-2
-        = match_link('Poprzednia', (@round.id - 1))
-      .col-sm-8.text-center
-        = link_to 'Wytypuj kolejkę!', round_types_path(@round.id), class: 'btn btn-default'
-      .col-sm-2
-        = match_link('Następna', (@round.id + 1))
-    %br/
-    %p= render "user_table"
+  .col-sm-2
+    = match_link('Poprzednia', (@round.id - 1))
+  .col-sm-8.text-center
+    = link_to 'Wytypuj kolejkę!', round_types_path(@round.id), class: 'btn btn-default'
+  .col-sm-2
+    = @round.next_round
+    = match_link('Następna', (@round.id + 1))
+%br/
+%p= render "user_table"
