some changes to groups

--- a/app/views/admin/rounds/_form.html.haml
+++ b/app/views/admin/rounds/_form.html.haml
@@ -5,6 +5,7 @@
     = f.input :name
     = f.input :started_at
     = f.input :competition_id, collection: Competition.all
+    = f.input :stage
 
   .form-actions
     = f.button :submit, 'Zapisz kolejkę'
