--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,10 +12,8 @@
     / Latest compiled and minified JavaScript
     %script{ src: "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js" }
     = favicon_link_tag 'favicon.ico'
+    = yield :third_party_js
 
-    %link#bootstrap-css{:href => "//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css", :rel => "stylesheet"}
-      %script{:src => "//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"}
-      %script{:src => "//code.jquery.com/jquery-1.11.1.min.js"}
   #holder
     %body
       = render 'layouts/navbar'
